dataset1235/2025-2/1153765216/users/3700556413/executions/2747719322_2667036473.log
== SUBMISSION (2025-08-21 18:02:07)
-- CODE: 
celsius = flot(input("digite uma temperatura em celsius: "))
kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = flot(input("digite uma temperatura em celsius: "))
              ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = flot(input("digite uma temperatura em celsius: "))
              ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = flot(input("digite uma temperatura em celsius: "))
              ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = flot(input("digite uma temperatura em celsius: "))
              ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = flot(input("digite uma temperatura em celsius: "))
              ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = flot(input("digite uma temperatura em celsius: "))
              ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:02:31)
-- CODE: 
celsius = flot(input("digite uma temperatura em celsius: "))

kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = flot(input("digite uma temperatura em celsius: "))
              ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = flot(input("digite uma temperatura em celsius: "))
              ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = flot(input("digite uma temperatura em celsius: "))
              ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = flot(input("digite uma temperatura em celsius: "))
              ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = flot(input("digite uma temperatura em celsius: "))
              ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = flot(input("digite uma temperatura em celsius: "))
              ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:02:50)
-- CODE: 
celsius = float(input("digite uma temperatura em celsius: "))

kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
digite uma temperatura em celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
digite uma temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
digite uma temperatura em celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
digite uma temperatura em celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
digite uma temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
digite uma temperatura em celsius: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
